# axum_tut

./: Cargo.toml
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
