[package]
name = "axum_tut"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version =  "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.9.0"
uuid = { version =  "1.10.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.81"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10"
lazy-regex = "3.3.0"
strum_macros = "0.26.4"

[dev-dependencies]
anyhow = "1.0.86"
